--- a/src/components/pages/Project.module.css
+++ b/src/components/pages/Project.module.css
@@ -3,3 +3,45 @@
     margin: 2rem auto;
     padding: 0 2rem;
 }
+
+.project_container h1 {
+    background-color: #2E2E40;
+    color: #FFBB33;
+    padding: .5rem;
+}
+
+.project_container span {
+    font-weight: bold;
+}
+
+.details_container {
+    border-bottom: 1px solid #7a7a7a;
+    padding-bottom: 1.2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.details_button {
+    background-color: #2E2E40;
+    border: none;
+    color: #F2F2F2;
+    text-decoration: none;
+    padding: 0.6rem 1rem;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.details_button:hover {
+    color: #FFBB33;
+}
+
+.project_info {
+    width: 100%;
+    padding: 1rem 0;
+}
+
+.project_info p {
+ padding: .4rem 0;
+}
