--- a/src/components/project/Card.module.css
+++ b/src/components/project/Card.module.css
@@ -41,7 +41,7 @@
 }
 
 .category_text .desenvolvimento {
-    background-color: #F2AE30;
+    background-color: #FFBB33;
 }
 
 .category_text .design {
@@ -80,5 +80,5 @@
 .project_card_actions a:hover, 
 .project_card_actions button:hover {
     background-color: #2E2E40;
-    color: #F2AE30;
+    color: #FFBB33;
 }
